# zephyr

./: CMakeLists.txt  Kconfig.zephyr  west.yml
boards/: CMakeLists.txt
boards/arm/01space_rp2040_042lcd/: 01space_rp2040_042lcd-pinctl.dtsi  01space_rp2040_042lcd.dts  01space_rp2040_042lcd.yaml  01space_rp2040_042lcd_defconfig  Kconfig.board  Kconfig.defconfig  seeed_xiao_connector.dtsi
boards/arm/adafruit_kb2040/: Kconfig.board  Kconfig.defconfig  adafruit_kb2040.dts  adafruit_kb2040_defconfig
boards/arm/adafruit_qt_py_rp2040/: Kconfig.board  Kconfig.defconfig  adafruit_qt_py_rp2040-pinctrl.dtsi  adafruit_qt_py_rp2040.dts  adafruit_qt_py_rp2040.yaml  adafruit_qt_py_rp2040_defconfig  seeed_xiao_connector.dtsi
boards/arm/boardsource_blok/: Kconfig.board  Kconfig.defconfig  boardsource_blok-pinctrl.dtsi  boardsource_blok.dts  boardsource_blok_defconfig  sparkfun_pro_micro.dtsi
boards/arm/elite_pi_rp2040/: Kconfig.board  Kconfig.defconfig  elite_pi_pro_micro.dtsi  elite_pi_rp2040.dts  elite_pi_rp2040_defconfig
boards/arm/rpi_pico/: rpi_pico.yaml
boards/arm/seeeduino_xiao/: seeeduino_xiao.dts
boards/arm/seeeduino_xiao_ble/: CMakeLists.txt  Kconfig  board.c  board.cmake  seeeduino_xiao_ble-pinctrl.dtsi  seeeduino_xiao_ble.dts  seeeduino_xiao_ble_defconfig
boards/arm/seeeduino_xiao_rp2040/: Kconfig.board  Kconfig.defconfig  seeed_xiao_connector.dtsi  seeeduino_xiao_rp2040-pinctl.dtsi  seeeduino_xiao_rp2040.dts  seeeduino_xiao_rp2040_defconfig
boards/arm/sparkfun_pro_mirco_rp2040/: sparkfun_pro_micro_rp2040.dts  sparkfun_pro_micro_rp2040_defconfig
(+65 files in other folders)
